# OxideEngine

./: CMakeLists.txt  Dockerfile  INSTALLER_README.md  build_installer.bat  build_installer.ps1  build_log.txt  build_release.ps1  cmake_help.txt  imgui.ini  myproject.MarioEngine  run_dev.ps1
build-msvc-x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  MarioEngine.sln  MarioEngine.vcxproj  MarioEngine.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.ini  imgui.vcxproj  imgui.vcxproj.filters
build-msvc-x64/MarioEngine.dir/Release/: MarioEngine.exe.recipe
build-msvc-x64/MarioEngine.dir/Release/MarioEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  MarioEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-msvc-x64/Release/: config.txt  imgui.ini
build-msvc-x64/imgui.dir/Release/imgui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  imgui.lastbuildstate
build-msvc-x64/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-msvc-x64/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-msvc-x64/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-msvc-x64/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
release-package/MarioEngine/: README.txt
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/core/: application.cpp  application.h
src/editor/: editor_defs.h  editor_layer.cpp  editor_layer.h
src/project/: project_manager.cpp  project_manager.h
src/scene/: scene.cpp  scene.h  scene_defs.h
src/shaders/: shader.cpp  shader.h
src/utils/: math_utils.cpp  math_utils.h
